--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
           <h1><span>JOE</span><br>DHIZA</h1>
           <h4>Backend Developer &nbsp; • &nbsp; Nigeria</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Veritatis deserunt maxime doloribus laborum 
+            Welcome to my Fullstack Engineering portfolio! I'm Joseph, a passionate and results-driven Fullstack Engineer with a strong background in both frontend and backend development. 
+            With a keen eye for design and a knack for building scalable, efficient, and user-friendly web applications, 
+            I'm dedicated to crafting digital experiences that not only meet the technical requirements but also exceed user expectations. 
           </p>
   
           <h4>Working with technologies:</h4>
