--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         
 
         <div class="about">
-          <h1><span>JOE</span><br>DHIZA</h1>
+          <h1><span>JOSEPH</span><br>DHIZA</h1>
           <h4>Backend Developer &nbsp; • &nbsp; Nigeria</h4>
           <p>
             Welcome to my Fullstack Engineering portfolio! I'm Joseph, a passionate and results-driven Fullstack Engineer with a strong background in both frontend and backend development. 
