--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h1><span>JOSEPH</span><br>DHIZA</h1>
           <h4>Backend Developer &nbsp; • &nbsp; Nigeria</h4>
           <p>
-            Welcome to my Fullstack Engineering portfolio! I'm Joseph, a passionate and results-driven Fullstack Engineer with a strong background in both frontend and backend development. 
+            I'm Joseph, a passionate and results-driven Fullstack Engineer with a background in both frontend and backend development. 
             With a keen eye for design and a knack for building scalable, efficient, and user-friendly web applications, 
             I'm dedicated to crafting digital experiences that not only meet the technical requirements but also exceed user expectations. 
           </p>
