--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
           <h1><span>JOSEPH</span><br>DHIZA</h1>
           <h4>Backend Developer &nbsp; • &nbsp; Nigeria</h4>
           <p>
-            I'm Joseph, a passionate and results-driven Fullstack Engineer with a background in both frontend and backend development. 
-            I'm dedicated to crafting digital experiences that not only meet the technical requirements but also exceed user expectations. 
+            Hi! I'm a passionate and results-driven Fullstack Engineer with a 
+            background in both frontend and backend development. 
+            I'm dedicated to crafting digital experiences that not only 
+            meet the technical requirements but also exceed user expectations. 
           </p>
   
           <h4>Working with technologies:</h4>
